fix: dark mode

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -34,7 +34,8 @@ html {
   transition: background 0.25s;
 }
 
-html.dark {
+
+.use-dark.dark {
   background: #242424;
   color: #ddd;
 }
